# cmake-bootstrap

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  README.md
ext/gtest/: CMakeLists.txt
lib/hello/: CMakeLists.txt
lib/hello/include/: hello.hpp
lib/hello/src/: hello.cpp
test/hello-test/: CMakeLists.txt
test/hello-test/src/: main.cpp
